# filebridge

./: README.md  pyproject.toml
src/filebridge/: __init__.py  excel.py
