[project]
name = "filebridge"
version = "0.1.0"
description = ""
authors = [
    {name = "Meher Shrishti Nigam",email = "mehershrishtinigam@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pywin32 (>=311,<312)",
    "pandas (>=2.3.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "xlrd (>=2.0.2,<3.0.0)"
]

[tool.poetry]
packages = [{include = "filebridge", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
